--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analog Clock</title>
+    <meta name="description" content="This is analog clock ,where you can see time with colors.This is Analog clock.">
+    <meta name="keywords" content="Analog Clock">
+    <meta name="keywords" content="Time">
+    <title>Analog Clock || Current Time</title>
+    <!-- <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/square-clock.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/vcferreira/firefox-os/128/clock-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <div class="indicator">
+<!--     <div class="indicator">
         <ul><li>REd - hours</li>
         <li>blue - min</li>
         <li>Green -sec</li></ul>
-    </div>
+    </div> -->
     <div class="clock">
         <div class="clockborder">
             <div class="hand hour"></div>
